--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="EZE Platform" />
+    <meta name="description" content="EZE Finance is a decentralized ecosystem for crypto investment management where users will stake and earn passive income and rewards. Visit our website now!" />
+    <meta name="keywords" content="Stake and Earn Passive Income" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="../src/assets/css/main.css" />
 
@@ -39,11 +40,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>EZE</title>
+    <title>EZE Finance - Stake and Earn Passive Income</title>
   </head>
 
   <body>
-    <noscript>EZE</noscript>
+    <noscript>EZE Finance - Stake and Earn Passive Income</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
