contact us page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       charset="UTF-8"
       href="css/animate.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       charset="UTF-8"
@@ -30,7 +30,7 @@
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-    />
+    /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -41,6 +41,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>EZE Finance - Stake and Earn Passive Income</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3J7S0Q29P1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3J7S0Q29P1');
+    </script>
   </head>
 
   <body>
