--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>EZE Finance - Stake and Earn Passive Income</title>
+    <title>EZE Finance - Wallet & Investment Platform</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3J7S0Q29P1"></script>
     <script>
