--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="EZE Finance is a decentralized ecosystem for crypto investment management where users will stake and earn passive income and rewards. Visit our website now!" />
     <meta name="keywords" content="Stake and Earn Passive Income" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="../src/assets/css/main.css" />
+    <!-- <link rel="stylesheet" href="../src/assets/css/main.css" /> -->
+    <link rel="stylesheet" href="./css/main.css">
 
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
